# xdsl-json

./: .gitignore  .gitmodules  Makefile  README.md  mkdocs.yml  pyproject.toml  renovate.json  tmp.md  truc
docs/: emit_llvm.cpp  struct_padding.cpp
docs/slides/: README.md  main.typ
docs/slides/images/: base.cpp  loop_llvm.graphviz  loop_llvm.ll  loop_mlir.graphviz  loop_mlir.mlir  python_ast.graphviz
examples/: memref_bridge.h
examples/array_edit/: main.call.cpp  main.json
examples/array_read/: main.call.cpp  main.json
examples/matrix_trace/: main.call.cpp  main.json
examples/ptr_array_edit/: main.call.cpp  main.json
examples/ptr_array_read/: main.call.cpp  main.json
examples/ptr_int/: main.call.cpp  main.json
examples/ptr_struct_nested/: main.call.cpp  main.json  trace.md
examples/python_max/: main.call.cpp  main.py
examples/python_somme/: main.call.cpp
examples/python_struct/: main.call.cpp  main.json  main.py
examples/soa_read/: main.call.cpp  main.json
examples/somme/: main.json
examples/somme_python/: main.py
examples/struct_edit/: main.call.cpp  main.json
examples/struct_read/: main.call.cpp  main.json
src/xdsljson/: trace.py
src/xdsljson/operations/: __init__.py  base.py  block.py  codegen.py  op_binary.py  op_call.py  op_cond.py  op_constant.py  op_define_function.py  op_define_struct.py  op_function.py  op_module.py  op_operator.py  op_print.py  op_set.py  op_var.py  op_while.py
src/xdsljson/pipeline/: cli.py  commands.py  compiler.py
src/xdsljson/utils/: block_entry.py  discard_builder.py  enum_scalars.py  same_types.py  ssa_check.py  ssa_dim.py  ssa_val.py
src/xdsljson/variables/: factory.py  memory.py  var.py
src/xdsljson/variables/ty/: ty.py  ty_SOA.py  ty_SSA.py  ty_buffer.py  ty_memref.py  ty_ptr.py  ty_scalar.py  ty_struct.py
src/xdsljson/variables/val/: val.py  val_SOA.py  val_SSA.py  val_buffer.py  val_memref.py  val_ptr.py  val_scalar.py  val_struct.py
tests/: run_tests.py
