[project]
name = "xdsljson"
description = "A template project using xDSL."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["xdsl~=0.63.0", "pydantic~=2.13.0", "pyyaml~=6.0"]

classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Typing :: Typed",
]
license = { text = "Apache License v2.0 with LLVM Exceptions" }
authors = []
dynamic = ["version"]

[project.entry-points.'xdsl.universe']
xdsl_template = 'xdsljson.universe:UNIVERSE'

[project.scripts]
xdsljson = "xdsljson.pipeline.compiler:main"

[project.urls]
Homepage = "https://xdsl.dev/xdsl-template"
"Source Code" = "https://github.com/Louis-max-H/xdsl-json"
"Issue Tracker" = "https://github.com/Louis-max-H/xdsl-json/issues"


[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/xdsljson"]

[dependency-groups]
dev = [
    "filecheck==1.0.3",
    "rich>=13.9.0",
    "lit<19.0.0",
    "pytest>=8.3.4",
    "pytest-cov",
    "pyright==1.1.409",
    "psutil",
]
docs = ["mkdocs-material>=9.5.48", "mkdocstrings[python]>=0.26.1"]


[tool.pyright]
venvPath = "."
venv = ".venv"
enableExperimentalFeatures = true
reportAssertAlwaysTrue = true
reportUnnecessaryCast = true
reportUnnecessaryIsValNode = true
reportUnnecessaryTypeIgnoreComment = true
typeCheckingMode = "strict"
extraPaths = ["src", "tests"]
"include" = ["docs", "src", "tests"]

[tool.ruff]
# Support Python 3.10+.
target-version = "py310"
src = ["src/", "tests/"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "PT", "TID251", "INP", "PYI"]
ignore = [
    "E741",   # https://beta.ruff.rs/docs/rules/ambiguous-variable-name/
    "PT006",  # https://beta.ruff.rs/docs/rules/pytest-parametrize-names-wrong-type/
    "PT011",  # https://beta.ruff.rs/docs/rules/pytest-raises-too-broad/
    "PT012",  # https://beta.ruff.rs/docs/rules/pytest-raises-with-multiple-statements/
    "PYI041", # https://docs.astral.sh/ruff/rules/redundant-numeric-union
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.format]
docstring-code-format = true

[tool.bandit]
exclude_dirs = [".venv/"]
skips = ["B101"]

[tool.pytest.ini_options]
addopts = ["--durations=20", "--maxfail=5", "--import-mode=importlib"]

[tool.coverage.run]
relative_files = true
branch = true
source = ["src/"]
concurrency = ["multiprocessing"]
parallel = true

[tool.coverage.report]
exclude_lines = [
    # Don't complain about missing debug-only code:
    "def __repr__",
    # Don't complain if tests don't hit defensive assertion code:
    "raise NotImplementedError",
    "raise ValueError",
    "raise TypeError",
    "raise RuntimeError",
    "assert_never",
    'if TYPE_CHECKING:',
    'pragma: no cover',
]
format = "markdown"
